--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-          crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-            crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script>
+        function validate() {
+            const name = $('#nameInput').val();
+            const surname = $('#surnameInput').val();
+            const lastName = $('#lastNameInput').val();
+            const description = $('#description').val();
+            let alertMessage = "";
+            if (name === "")
+                alertMessage = "Поле 'Имя' должно быть заполнено\n";
+            if (surname === "") {
+                alertMessage += "Поле 'Отчество' должно быть заполнено\n";
+            }
+            if (lastName === "") {
+                alertMessage += "Поле 'Фамилия' должно быть заполнено\n";
+            }
+            if (!document.getElementById("gender1").checked
+                && !document.getElementById("gender2").checked) {
+                alertMessage += "Выберите пол\n";
+            }
+            if (description === "") {
+                alertMessage += "Поле 'Описание' должно быть заполнено\n";
+            }
+            if (alertMessage !== "")
+                alert(alertMessage);
+
+            return false;
+        }
+    </script>
     <title>My first bootstrap page</title>
 </head>
 <body>
@@ -19,36 +42,39 @@
         <div class="form-group col-md-4">
             <label for="nameInput" class="col-sm-2 col-form-label">Имя</label>
             <input type="text" class="form-control" id="nameInput" aria-describedby="emailHelp">
+            <small class="form-text text-muted">Введите Ваше имя</small>
         </div>
         <div class="form-group col-md-4">
             <label for="surnameInput" class="col-sm-2 col-form-label">Отчество</label>
             <input type="text" class="form-control" id="surnameInput">
+            <small class="form-text text-muted">Введите Ваше отчество</small>
         </div>
         <div class="form-group col-md-4">
-            <label for="surnameInput" class="col-sm-2 col-form-label">Фамилия</label>
+            <label for="lastNameInput" class="col-sm-2 col-form-label">Фамилия</label>
             <input type="text" class="form-control" id="lastNameInput">
+            <small class="form-text text-muted">Введите Вашу фамилию</small>
         </div>
     </div>
     <div class="form-group col-md-6">
         <label for="gender" class="col-md-6">Пол</label>
         <div class="form-group col-md-6" id="gender">
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male">
-                <label class="form-check-label" for="inlineRadio1">М</label>
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="gender1" value="male">
+                <label class="form-check-label" for="gender1">М</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="female">
-                <label class="form-check-label" for="inlineRadio2">Ж</label>
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="gender2" value="female">
+                <label class="form-check-label" for="gender2">Ж</label>
             </div>
         </div>
     </div>
     <div class="form-group col-md-8">
         <label for="description" class="col-md-6">Описание</label>
-        <textarea class="form-control" id="description" rows="2"></textarea>
+        <textarea class="form-control" id="description" rows="3"></textarea>
         <small id="descriptionHelp" class="form-text text-muted">Напишите кратко о себе</small>
     </div>
     <div class="form-group col-md-6">
-        <button type="submit" class="btn btn-primary">Отправить</button>
+        <button type="submit" class="btn btn-primary" onclick="return validate();">Отправить</button>
     </div>
 </form>
 <div class="col-md-8">
@@ -56,10 +82,10 @@
         <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Фамилия</th>
             <th scope="col">Имя</th>
-            <th scope="col">Отчество</th>
-            <th scope="col">Специальность</th>
+            <th scope="col">Фамилия</th>
+            <th scope="col">Пол</th>
+            <th scope="col">Описание</th>
         </tr>
         </thead>
         <tbody>
